Fix overflow/scrolling issue by adding wrwappers / overflow hidden

--- a/src/React/components/HomePage/Landing/Landing.css
+++ b/src/React/components/HomePage/Landing/Landing.css
@@ -21,13 +21,20 @@
     color: var(--accent-name-color);
 }
 
+.Landing .aboutWrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .Landing .aboutText .devText {
     color: var(--accent-name-color);
 }
 
 .Landing .aboutText {
     opacity: 0;
-    position: absolute;
     padding-inline: 1rem;
 }
 
@@ -44,6 +51,7 @@
     }
     to {
         opacity: 100%;
+        transform: translate(0%, 0%);
     }
 }
 
@@ -175,7 +183,6 @@
         text-align: center;
     }
 }
-
 
 @media (min-width: 2550px) {
     .iconsLayer .orbitIcon {
