--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,6 @@
 
 .App {
     position: relative;
-    overflow-x: hidden;
 }
 
 p {
